syntax = "proto3";
package rbp.rpc.user;

import "rbp/plugin/option.proto";

import "rpc/user/auth_message.proto";

option go_package = "github.com/olaola-chat/slp-proto/rpcclient/user";


service RbpUserAuth {
  option (rbp.plugin.rbp_service).name = "Rbp.User.Auth";

  rpc Auth(ReqUserAuth) returns (RepUserAuth);
}


